Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+i<!DOCTYPE html>
 <html lang="pt-br">
 <head>
   <meta charset="UTF-8">
@@ -1540,8 +1540,6 @@
       doc.text("__________________________________________", 50, 190);
       doc.text("Assinatura do Professor", 105, 198, null, null, 'center');
       
-      doc.text("__________________________________________", 50, 210);
-      doc.text("Assinatura do Responsável", 105, 218, null, null, 'center');
       
       // Data e hora de geração
       const agora = new Date();
