--- a/index.html
+++ b/index.html
@@ -514,36 +514,90 @@
           <label>PROFESSOR:</label>
           <select id="professor" onchange="atualizarEmail()">
             <option>Selecione</option>
-            <option value="ADEMAR RIBEIRO DE SOUZA">ADEMAR RIBEIRO DE SOUZA</option>
-            <option value="ALEX LUTH PEREIRA MARANHAO">ALEX LUTH PEREIRA MARANHAO</option>
-            <option value="ALEXANDRE SILVA LIMA">ALEXANDRE SILVA LIMA</option>
-            <option value="ANA PAULA MARTINS">ANA PAULA MARTINS</option>
-            <option value="ANDRE LUIZ FERREIRA">ANDRE LUIZ FERREIRA</option>
-            <option value="ANTONIO CARLOS DA SILVA">ANTONIO CARLOS DA SILVA</option>
-            <option value="BEATRIZ OLIVEIRA SANTOS">BEATRIZ OLIVEIRA SANTOS</option>
-            <option value="CARLOS EDUARDO RODRIGUES">CARLOS EDUARDO RODRIGUES</option>
-            <option value="CLAUDIA REGINA FERNANDES">CLAUDIA REGINA FERNANDES</option>
-            <option value="DANIELA PEREIRA COSTA">DANIELA PEREIRA COSTA</option>
-            <option value="EDUARDO HENRIQUE GOMES">EDUARDO HENRIQUE GOMES</option>
-            <option value="FABIANA APARECIDA SOUZA">FABIANA APARECIDA SOUZA</option>
-            <option value="FERNANDO LUIZ MACHADO">FERNANDO LUIZ MACHADO</option>
-            <option value="GABRIELA SILVEIRA ALMEIDA">GABRIELA SILVEIRA ALMEIDA</option>
-            <option value="GUSTAVO HENRIQUE BARBOSA">GUSTAVO HENRIQUE BARBOSA</option>
-            <option value="HELENA MARIA FERREIRA">HELENA MARIA FERREIRA</option>
-            <option value="IGOR RAFAEL SANTANA">IGOR RAFAEL SANTANA</option>
-            <option value="JULIANA APARECIDA LIMA">JULIANA APARECIDA LIMA</option>
-            <option value="LEONARDO AUGUSTO MARTINS">LEONARDO AUGUSTO MARTINS</option>
-            <option value="LUCIANA FERREIRA SILVA">LUCIANA FERREIRA SILVA</option>
-            <option value="MARCELO ANTONIO COSTA">MARCELO ANTONIO COSTA</option>
-            <option value="MARIA EDUARDA SANTOS">MARIA EDUARDA SANTOS</option>
-            <option value="PATRICIA FERNANDA OLIVEIRA">PATRICIA FERNANDA OLIVEIRA</option>
-            <option value="RAFAEL AUGUSTO PEREIRA">RAFAEL AUGUSTO PEREIRA</option>
-            <option value="RENATA APARECIDA GOMES">RENATA APARECIDA GOMES</option>
-            <option value="RODRIGO HENRIQUE ALVES">RODRIGO HENRIQUE ALVES</option>
-            <option value="SANDRA REGINA MACHADO">SANDRA REGINA MACHADO</option>
-            <option value="TATIANE APARECIDA BARBOSA">TATIANE APARECIDA BARBOSA</option>
-            <option value="THIAGO HENRIQUE FERREIRA">THIAGO HENRIQUE FERREIRA</option>
-            <option value="VANESSA CRISTINA SILVA">VANESSA CRISTINA SILVA</option>
+           <option value="ADEMAR RIBEIRO DE SOUZA">ADEMAR RIBEIRO DE SOUZA</option>
+<option value="ALEX LUTH PEREIRA MARANHAO">ALEX LUTH PEREIRA MARANHAO</option>
+<option value="ALEXANDRE SILVA LIMA">ALEXANDRE SILVA LIMA</option>
+<option value="ALEXSANDRA PAULA VARELLA DE SOUZA">ALEXSANDRA PAULA VARELLA DE SOUZA</option>
+<option value="ALISON VASCONCELOS BESERRA">ALISON VASCONCELOS BESERRA</option>
+<option value="AMAURI TEODORO DE OLIVEIRA">AMAURI TEODORO DE OLIVEIRA</option>
+<option value="ANA PAULA DOS SANTOS">ANA PAULA DOS SANTOS</option>
+<option value="ANDRE LUIZ TAVARES">ANDRE LUIZ TAVARES</option>
+<option value="ANDREIA DOS SANTOS FREITAS">ANDREIA DOS SANTOS FREITAS</option>
+<option value="ANDREIA MADUREIRA REIS">ANDREIA MADUREIRA REIS</option>
+<option value="ANTONIO CARLOS DE OLIVEIRA">ANTONIO CARLOS DE OLIVEIRA</option>
+<option value="ANTONIO RAMOS DE ARAUJO">ANTONIO RAMOS DE ARAUJO</option>
+<option value="ANTONIO WILTON WANDERLEY CABRAL">ANTONIO WILTON WANDERLEY CABRAL</option>
+<option value="AUGUSTO LINO PESSOA NETO">AUGUSTO LINO PESSOA NETO</option>
+<option value="AUREA MARIA DE JESUS MARQUES">AUREA MARIA DE JESUS MARQUES</option>
+<option value="CAROLINA PERNOMIAN PARUSSOLO">CAROLINA PERNOMIAN PARUSSOLO</option>
+<option value="CASSIA OLIVEIRA ANTONIAZI">CASSIA OLIVEIRA ANTONIAZI</option>
+<option value="DANIEL DE FREITAS ALMEIDA">DANIEL DE FREITAS ALMEIDA</option>
+<option value="DANIEL LOPES BARBOSA">DANIEL LOPES BARBOSA</option>
+<option value="DANIELA FERREIRA LIMA">DANIELA FERREIRA LIMA</option>
+<option value="EDIANE VIEIRA DA SILVA">EDIANE VIEIRA DA SILVA</option>
+<option value="EDILEUSA NUNES PEREIRA">EDILEUSA NUNES PEREIRA</option>
+<option value="EDUARDO HENRIQUE DA FONSECA">EDUARDO HENRIQUE DA FONSECA</option>
+<option value="ELIANE SANTOS SILVA">ELIANE SANTOS SILVA</option>
+<option value="ELIAS MONTEIRO DA SILVA">ELIAS MONTEIRO DA SILVA</option>
+<option value="ELISABETE APARECIDA PIRES">ELISABETE APARECIDA PIRES</option>
+<option value="ELZA DE FARIA PEREIRA">ELZA DE FARIA PEREIRA</option>
+<option value="EMERSON GABLER DE ALMEIDA">EMERSON GABLER DE ALMEIDA</option>
+<option value="ERINEIDE LEITE ARAGAO NERY">ERINEIDE LEITE ARAGAO NERY</option>
+<option value="EUZELI ARAUJO DE OLIVEIRA">EUZELI ARAUJO DE OLIVEIRA</option>
+<option value="FABIANO AUGUSTO PIEDADE">FABIANO AUGUSTO PIEDADE</option>
+<option value="FABIO CAMILO">FABIO CAMILO</option>
+<option value="FERNANDO JOSE DA SILVA FILHO">FERNANDO JOSE DA SILVA FILHO</option>
+<option value="FLAVIA CRISTINA APARECIDA BICHLER">FLAVIA CRISTINA APARECIDA BICHLER</option>
+<option value="FLAVIO CARDOSO FLEURY">FLAVIO CARDOSO FLEURY</option>
+<option value="GABRIELA SERIGHELLI DE MELO">GABRIELA SERIGHELLI DE MELO</option>
+<option value="GENILTON DE OLIVEIRA SILVA">GENILTON DE OLIVEIRA SILVA</option>
+<option value="GIANI CRISTINA DO PRADO">GIANI CRISTINA DO PRADO</option>
+<option value="INGRYD CAROLINA SUGUIMOTO VIEIRA">INGRYD CAROLINA SUGUIMOTO VIEIRA</option>
+<option value="IVANILDES DOS SANTOS OSHIKAWA">IVANILDES DOS SANTOS OSHIKAWA</option>
+<option value="JANINA DOS PASSOS BRAGA DE ALMEIDA">JANINA DOS PASSOS BRAGA DE ALMEIDA</option>
+<option value="JUAREZ GOMES DE MAGALHAES FILHO">JUAREZ GOMES DE MAGALHAES FILHO</option>
+<option value="JUREMA SOLEDADE FURINI SANTOS">JUREMA SOLEDADE FURINI SANTOS</option>
+<option value="KATIUSCIA ALVES BOMFIM">KATIUSCIA ALVES BOMFIM</option>
+<option value="KETHY REGINA DA SILVA DOMINGOS COSTA">KETHY REGINA DA SILVA DOMINGOS COSTA</option>
+<option value="LUANA CAROLINE ALVES LIMA">LUANA CAROLINE ALVES LIMA</option>
+<option value="LUANA DE FREITAS SILVA">LUANA DE FREITAS SILVA</option>
+<option value="LUCIANA NOVAIS CORREIA SANTOS">LUCIANA NOVAIS CORREIA SANTOS</option>
+<option value="LUCIANO MOREIRA DE AZEVEDO">LUCIANO MOREIRA DE AZEVEDO</option>
+<option value="MARCELO FERNANDES DA SILVA">MARCELO FERNANDES DA SILVA</option>
+<option value="MARCIEL DA SILVA">MARCIEL DA SILVA</option>
+<option value="MARIA HELENA CUNHA MORO">MARIA HELENA CUNHA MORO</option>
+<option value="MARIA QUITÉRIA FERREIRA DOS SANTOS">MARIA QUITÉRIA FERREIRA DOS SANTOS</option>
+<option value="MARINA DA CONCEICAO FRANCISCO SILVA">MARINA DA CONCEICAO FRANCISCO SILVA</option>
+<option value="MAURICIO DE BARROS SANTOS">MAURICIO DE BARROS SANTOS</option>
+<option value="MICHELE DE PINHO MORAES">MICHELE DE PINHO MORAES</option>
+<option value="MOISES ANTONIO DE BARROS">MOISES ANTONIO DE BARROS</option>
+<option value="PATRICIA GOMES ROCHA RIBEIRO">PATRICIA GOMES ROCHA RIBEIRO</option>
+<option value="PAULA ARMANI VILA">PAULA ARMANI VILA</option>
+<option value="PAULO ROBERTO DA SILVA ITO">PAULO ROBERTO DA SILVA ITO</option>
+<option value="PEDRO ZANOTTI FILHO">PEDRO ZANOTTI FILHO</option>
+<option value="RAUL PEREIRA VILERA JUNIOR">RAUL PEREIRA VILERA JUNIOR</option>
+<option value="REGIANE CURTI DE SOUZA OLIVEIRA">REGIANE CURTI DE SOUZA OLIVEIRA</option>
+<option value="REGINA DA SILVA CASTRO">REGINA DA SILVA CASTRO</option>
+<option value="RICARDO AMERICO DA SILVA">RICARDO AMERICO DA SILVA</option>
+<option value="ROBERTO SALGADO">ROBERTO SALGADO</option>
+<option value="RODRIGO VIEIRA">RODRIGO VIEIRA</option>
+<option value="ROSANGELA CAFASSO MOREIRA">ROSANGELA CAFASSO MOREIRA</option>
+<option value="ROSIMERY DE SOUZA PESSOA">ROSIMERY DE SOUZA PESSOA</option>
+<option value="ROSMARA DA SILVA CARDOSO">ROSMARA DA SILVA CARDOSO</option>
+<option value="SANDRA CRISTINA MACEDO MORAES">SANDRA CRISTINA MACEDO MORAES</option>
+<option value="SELMA GOMES DA SILVA">SELMA GOMES DA SILVA</option>
+<option value="SERGIO AGRIPINO VILLA NOVA">SERGIO AGRIPINO VILLA NOVA</option>
+<option value="SOLANGE ALMEIDA DA SILVA">SOLANGE ALMEIDA DA SILVA</option>
+<option value="SUELI SILVE PEREIRA">SUELI SILVE PEREIRA</option>
+<option value="SUZINEIDE SILVA DE FREITAS">SUZINEIDE SILVA DE FREITAS</option>
+<option value="THIAGO FABIANO BRITO">THIAGO FABIANO BRITO</option>
+<option value="TITTO AUGUSTO NASCIMENTO SILVA">TITTO AUGUSTO NASCIMENTO SILVA</option>
+<option value="VANDERSON HYPPOLITO">VANDERSON HYPPOLITO</option>
+<option value="VANESSA IVETE GOMES DOS SANTOS">VANESSA IVETE GOMES DOS SANTOS</option>
+<option value="VANIA PENHA DE BARROS">VANIA PENHA DE BARROS</option>
+<option value="VIVIANE LEAL CAMERA DE MORAES">VIVIANE LEAL CAMERA DE MORAES</option>
+<option value="WILSON LUIZ DE SOUZA COSTA">WILSON LUIZ DE SOUZA COSTA</option>
+<option value="WILSON RODRIGUES MOTA">WILSON RODRIGUES MOTA</option>
           </select>
         </div>
         <div class="form-group">
