--- a/index.html
+++ b/index.html
@@ -821,36 +821,93 @@
     
     // Dados dos professores
     const teacherEmails = {
-      "ADEMAR RIBEIRO DE SOUZA": "ademarribeirosouza@prof.educacao.sp.gov.br",
-      "ALEX LUTH PEREIRA MARANHAO": "luth@prof.educacao.sp.gov.br",
-      "ALEXANDRE SILVA LIMA": "alexandresilvalima@prof.educacao.sp.gov.br",
-      "ANA PAULA MARTINS": "anapaulamartins@prof.educacao.sp.gov.br",
-      "ANDRE LUIZ FERREIRA": "andreluizferreira@prof.educacao.sp.gov.br",
-      "ANTONIO CARLOS DA SILVA": "antoniocarlossilva@prof.educacao.sp.gov.br",
-      "BEATRIZ OLIVEIRA SANTOS": "beatrizoliveirasantos@prof.educacao.sp.gov.br",
-      "CARLOS EDUARDO RODRIGUES": "carloseduardorodrigues@prof.educacao.sp.gov.br",
-      "CLAUDIA REGINA FERNANDES": "claudiafernandes@prof.educacao.sp.gov.br",
-      "DANIELA PEREIRA COSTA": "danielapereiracosta@prof.educacao.sp.gov.br",
-      "EDUARDO HENRIQUE GOMES": "eduardogomes@prof.educacao.sp.gov.br",
-      "FABIANA APARECIDA SOUZA": "fabianasouza@prof.educacao.sp.gov.br",
-      "FERNANDO LUIZ MACHADO": "fernandomachado@prof.educacao.sp.gov.br",
-      "GABRIELA SILVEIRA ALMEIDA": "gabrielalmeida@prof.educacao.sp.gov.br",
-      "GUSTAVO HENRIQUE BARBOSA": "gustavobarbosa@prof.educacao.sp.gov.br",
-      "HELENA MARIA FERREIRA": "helenaferreira@prof.educacao.sp.gov.br",
-      "IGOR RAFAEL SANTANA": "igorsantana@prof.educacao.sp.gov.br",
-      "JULIANA APARECIDA LIMA": "julianalima@prof.educacao.sp.gov.br",
-      "LEONARDO AUGUSTO MARTINS": "leonardomartins@prof.educacao.sp.gov.br",
-      "LUCIANA FERREIRA SILVA": "lucianasilva@prof.educacao.sp.gov.br",
-      "MARCELO ANTONIO COSTA": "marcelocosta@prof.educacao.sp.gov.br",
-      "MARIA EDUARDA SANTOS": "mariasantos@prof.educacao.sp.gov.br",
-      "PATRICIA FERNANDA OLIVEIRA": "patriciaoliveira@prof.educacao.sp.gov.br",
-      "RAFAEL AUGUSTO PEREIRA": "rafaelpereira@prof.educacao.sp.gov.br",
-      "RENATA APARECIDA GOMES": "renatagomes@prof.educacao.sp.gov.br",
-      "RODRIGO HENRIQUE ALVES": "rodrigoalves@prof.educacao.sp.gov.br",
-      "SANDRA REGINA MACHADO": "sandramachado@prof.educacao.sp.gov.br",
-      "TATIANE APARECIDA BARBOSA": "tatianebarbosa@prof.educacao.sp.gov.br",
-      "THIAGO HENRIQUE FERREIRA": "thiagoferreira@prof.educacao.sp.gov.br",
-      "VANESSA CRISTINA SILVA": "vanessasilva@prof.educacao.sp.gov.br"
+{
+  "ADEMAR RIBEIRO DE SOUZA": "ademarribeirosouza@prof.educacao.sp.gov.br",
+  "ALEX LUTH PEREIRA MARANHAO": "luth@prof.educacao.sp.gov.br",
+  "ALEXANDRE SILVA LIMA": "alexandresilvalima@prof.educacao.sp.gov.br",
+  "ALEXSANDRA PAULA VARELLA DE SOUZA": "avarella@prof.educacao.sp.gov.br",
+  "ALISON VASCONCELOS BESERRA": "alisonv@prof.educacao.sp.gov.br",
+  "AMAURI TEODORO DE OLIVEIRA": "amaurit@prof.educacao.sp.gov.br",
+  "ANA PAULA DOS SANTOS": "paulasantosa@prof.educacao.sp.gov.br",
+  "ANDRE LUIZ TAVARES": "andreltavares@prof.educacao.sp.gov.br",
+  "ANDREIA DOS SANTOS FREITAS": "sanfreitas@prof.educacao.sp.gov.br",
+  "ANDREIA MADUREIRA REIS": "andreiamadureira@prof.educacao.sp.gov.br",
+  "ANTONIO CARLOS DE OLIVEIRA": "antoniocarloso@prof.educacao.sp.gov.br",
+  "ANTONIO RAMOS DE ARAUJO": "antonioramosaraujo@prof.educacao.sp.gov.br",
+  "ANTONIO WILTON WANDERLEY CABRAL": "antoniowilton@prof.educacao.sp.gov.br",
+  "AUGUSTO LINO PESSOA NETO": "augustolino@prof.educacao.sp.gov.br",
+  "AUREA MARIA DE JESUS MARQUES": "aureamaria@prof.educacao.sp.gov.br",
+  "CAROLINA PERNOMIAN PARUSSOLO": "carolinapernomian@prof.educacao.sp.gov.br",
+  "CASSIA OLIVEIRA ANTONIAZI": "cassiaosilva@prof.educacao.sp.gov.br",
+  "DANIEL DE FREITAS ALMEIDA": "danielalmeida@prof.educacao.sp.gov.br",
+  "DANIEL LOPES BARBOSA": "daniellopesbarbosa@prof.educacao.sp.gov.br",
+  "DANIELA FERREIRA LIMA": "danielaflima@prof.educacao.sp.gov.br",
+  "EDIANE VIEIRA DA SILVA": "ediane@prof.educacao.sp.gov.br",
+  "EDILEUSA NUNES PEREIRA": "edileusa@prof.educacao.sp.gov.br",
+  "EDUARDO HENRIQUE DA FONSECA": "henriquefonseca@prof.educacao.sp.gov.br",
+  "ELIANE SANTOS SILVA": "essantos@prof.educacao.sp.gov.br",
+  "ELIAS MONTEIRO DA SILVA": "elias1@prof.educacao.sp.gov.br",
+  "ELISABETE APARECIDA PIRES": "elisabetepires@prof.educacao.sp.gov.br",
+  "ELZA DE FARIA PEREIRA": "elzafariapereira@prof.educacao.sp.gov.br",
+  "EMERSON GABLER DE ALMEIDA": "egabler@prof.educacao.sp.gov.br",
+  "ERINEIDE LEITE ARAGAO NERY": "erineidearagao@prof.educacao.sp.gov.br",
+  "EUZELI ARAUJO DE OLIVEIRA": "euzeli@prof.educacao.sp.gov.br",
+  "FABIANO AUGUSTO PIEDADE": "fabianoaugusto@prof.educacao.sp.gov.br",
+  "FABIO CAMILO": "camilof@prof.educacao.sp.gov.br",
+  "FERNANDO JOSE DA SILVA FILHO": "fernandojs@prof.educacao.sp.gov.br",
+  "FLAVIA CRISTINA APARECIDA BICHLER": "flaviacri@prof.educacao.sp.gov.br",
+  "FLÁVIA CRISTINA APARECIDA BICHLER": "flaviacri@prof.educacao.sp.gov.br",
+  "FLAVIO CARDOSO FLEURY": "flaviofleury@prof.educacao.sp.gov.br",
+  "GABRIELA SERIGHELLI DE MELO": "gabrielaserighelli@prof.educacao.sp.gov.br",
+  "GENILTON DE OLIVEIRA SILVA": "genilton@prof.educacao.sp.gov.br",
+  "GIANI CRISTINA DO PRADO": "gianiprado@prof.educacao.sp.gov.br",
+  "INGRYD CAROLINA SUGUIMOTO VIEIRA": "ingryd@prof.educacao.sp.gov.br",
+  "IVANILDES DOS SANTOS OSHIKAWA": "oshikawa@prof.educacao.sp.gov.br",
+  "JANINA DOS PASSOS BRAGA DE ALMEIDA": "janinabraga@prof.educacao.sp.gov.br",
+  "JUAREZ GOMES DE MAGALHAES FILHO": "juarezgomes@prof.educacao.sp.gov.br",
+  "JUREMA SOLEDADE FURINI SANTOS": "juremas@prof.educacao.sp.gov.br",
+  "KATIUSCIA ALVES BOMFIM": "katiusciabomfim@prof.educacao.sp.gov.br",
+  "KETHY REGINA DA SILVA DOMINGOS COSTA": "kethy@prof.educacao.sp.gov.br",
+  "LUANA CAROLINE ALVES LIMA": "luanalima01@prof.educacao.sp.gov.br",
+  "LUANA DE FREITAS SILVA": "luanafreitas@prof.educacao.sp.gov.br",
+  "LUCIANA NOVAIS CORREIA SANTOS": "novaiscorreia@prof.educacao.sp.gov.br",
+  "LUCIANO MOREIRA DE AZEVEDO": "lucianomoreira@prof.educacao.sp.gov.br",
+  "MARCELO FERNANDES DA SILVA": "marcelofs@prof.educacao.sp.gov.br",
+  "MARCIEL DA SILVA": "marcielsilva@prof.educacao.sp.gov.br",
+  "MARIA HELENA CUNHA MORO": "marcunha@prof.educacao.sp.gov.br",
+  "MARIA QUITÉRIA FERREIRA DOS SANTOS": "quiteriasantos@prof.educacao.sp.gov.br",
+  "MARINA DA CONCEICAO FRANCISCO SILVA": "marinafrancisco@prof.educacao.sp.gov.br",
+  "MAURICIO DE BARROS SANTOS": "mauriciobsantos@prof.educacao.sp.gov.br",
+  "MICHELE DE PINHO MORAES": "michelepinho@prof.educacao.sp.gov.br",
+  "MOISES ANTONIO DE BARROS": "moisesbarros@prof.educacao.sp.gov.br",
+  "PATRICIA GOMES ROCHA RIBEIRO": "patriciag@prof.educacao.sp.gov.br",
+  "PAULA ARMANI VILA": "paulaarmani@prof.educacao.sp.gov.br",
+  "PAULO ROBERTO DA SILVA ITO": "pauloito@prof.educacao.sp.gov.br",
+  "PEDRO ZANOTTI FILHO": "pedrozanotti@prof.educacao.sp.gov.br",
+  "RAUL PEREIRA VILERA JUNIOR": "vilera@prof.educacao.sp.gov.br",
+  "REGIANE CURTI DE SOUZA OLIVEIRA": "regianecurti@prof.educacao.sp.gov.br",
+  "REGINA DA SILVA CASTRO": "reginasilvacastro@prof.educacao.sp.gov.br",
+  "RICARDO AMERICO DA SILVA": "ricardoamerico@prof.educacao.sp.gov.br",
+  "ROBERTO SALGADO": "robertosalgado@prof.educacao.sp.gov.br",
+  "RODRIGO VIEIRA": "rodrigovieira1@prof.educacao.sp.gov.br",
+  "ROSANGELA CAFASSO MOREIRA": "cafasso@prof.educacao.sp.gov.br",
+  "ROSIMERY DE SOUZA PESSOA": "rosimerypessoa@prof.educacao.sp.gov.br",
+  "ROSMARA DA SILVA CARDOSO": "rosmaracardoso@prof.educacao.sp.gov.br",
+  "SANDRA CRISTINA MACEDO MORAES": "sandracristinamacedo@prof.educacao.sp.gov.br",
+  "SELMA GOMES DA SILVA": "selmagomess@prof.educacao.sp.gov.br",
+  "SERGIO AGRIPINO VILLA NOVA": "sergioagripino@prof.educacao.sp.gov.br",
+  "SOLANGE ALMEIDA DA SILVA": "almeidafazio@prof.educacao.sp.gov.br",
+  "SUELI SILVE PEREIRA": "suelisilve@prof.educacao.sp.gov.br",
+  "SUZINEIDE SILVA DE FREITAS": "suzineidefreitas@prof.educacao.sp.gov.br",
+  "THIAGO FABIANO BRITO": "thiagofabiano@prof.educacao.sp.gov.br",
+  "TITTO AUGUSTO NASCIMENTO SILVA": "titto@prof.educacao.sp.gov.br",
+  "VANDERSON HYPPOLITO": "vhypolito@prof.educacao.sp.gov.br",
+  "VANESSA IVETE GOMES DOS SANTOS": "vanessaivete@prof.educacao.sp.gov.br",
+  "VANIA PENHA DE BARROS": "vaniapenha@prof.educacao.sp.gov.br",
+  "VIVIANE LEAL CAMERA DE MORAES": "camera@prof.educacao.sp.gov.br",
+  "WILSON LUIZ DE SOUZA COSTA": "wilsonluizsouza@prof.educacao.sp.gov.br",
+  "WILSON RODRIGUES MOTA": "wmota@prof.educacao.sp.gov.br"
+}
     };
 
     // Dados das salas por turma
