--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
   </style>
 </head>
 <body>
-  <h2>AGENDAMENTO DE APARELHOS - CORRIGIDO</h2>
+  <h2>AGENDAMENTO DE APARELHOS</h2>
   <div class="container">
     <div class="form-container">
       <div class="form-row">
