--- a/index.html
+++ b/index.html
@@ -917,6 +917,7 @@
       "FLAVIA CRISTINA APARECIDA BICHLER": "flaviacri@prof.educacao.sp.gov.br",
       "FLAVIO CARDOSO FLEURY": "flaviofleury@prof.educacao.sp.gov.br",
       "GABRIELA SERIGHELLI DE MELO": "gabrielaserighelli@prof.educacao.sp.gov.br",
+      "GELSON DE ALMEIDA BATISTA": "gelsonalmeida@prof.educacao.sp.gov.br",
       "GENILTON DE OLIVEIRA SILVA": "genilton@prof.educacao.sp.gov.br",
       "GIANI CRISTINA DO PRADO": "gianiprado@prof.educacao.sp.gov.br",
       "INGRYD CAROLINA SUGUIMOTO VIEIRA": "ingryd@prof.educacao.sp.gov.br",
