--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
   
   <div class="solution-banner">
     <i class="fas fa-check-circle"></i>
-    Problema do campo de aulas resolvido com sucesso!
+    Sistema integrado aos horários das aulas!
   </div>
   
   <div class="container">
