--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@
   
   <div class="solution-banner">
     <i class="fas fa-check-circle"></i>
-    Sistema integrado aos horários das aulas!
+    <img src="https://www.canva.com/design/DAGo_w0xpjM/SFOF2XzJKW3-5x3DCRPPBQ/view?utm_content=DAGo_w0xpjM&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h05e547e71b" alt="Texto alternativo">
   </div>
   
   <div class="container">
