--- a/index.html
+++ b/index.html
@@ -719,10 +719,11 @@
 <body>
   <h2>AGENDAMENTO DE APARELHOS</h2>
   
-  <div class="solution-banner">
-    <i class="fas fa-check-circle"></i>
-    <img src="https://www.canva.com/design/DAGo_w0xpjM/SFOF2XzJKW3-5x3DCRPPBQ/view?utm_content=DAGo_w0xpjM&utm_campaign=designshare&utm_medium=link2&utm_source=uniquelinks&utlId=h05e547e71b" alt="Texto alternativo">
-  </div>
+  <!-- Exemplo com link direto (após hospedar a imagem) -->
+<div class="solution-banner">
+  <i class="fas fa-check-circle"></i>
+  <img src="https://exemplo.com/sua-imagem-direta.jpg" alt="Descrição da imagem">
+</div>
   
   <div class="container">
     <div class="form-container">
