--- a/index.html
+++ b/index.html
@@ -722,7 +722,7 @@
   <!-- Exemplo com link direto (após hospedar a imagem) -->
 <div class="solution-banner">
   <i class="fas fa-check-circle"></i>
-  <img src="https://exemplo.com/sua-imagem-direta.jpg" alt="Descrição da imagem">
+  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhALE6zV03O2sEDyVJN7p45NMALWt0h_VENkkDdcBakZv1VYej9XhQJ-aTFCpj3x1O6MdDMK_mo-i4MVbrL_qjMLewlFD6NNcMC-zxLbSlNkYjBOCTV9ZvuY4ycLBjzFB3GtfzUso1-MYyPRAphx5STg85XFCefXxw37IQdx353jqo_FjhQRkrMzvY01UGh/s204/Design%20sem%20nome.png" alt="Descrição da imagem">
 </div>
   
   <div class="container">
