--- a/index.html
+++ b/index.html
@@ -722,6 +722,7 @@
   <!-- Exemplo com link direto (após hospedar a imagem) -->
 <div class="solution-banner">
   <i class="fas fa-check-circle"></i>
+  <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhoSnpP38GLVz5wmRdVtibKgpATo3EgheWJabR2o3aM9Iw2Cxq_9HzlsPcI6E3v8iYI8LKZGjszgVSKUYWki8UXm4YA4COOr_aVZlbsRKTUyFhNLA69U1u2AKg7rWFK2aHn2CFnI-M6GEr_jPRMY65SvSrCYJpYkLCmPNToU_v9pY4uJ-m9-nEKmcJcwbHw/s204/Design_sem_nome__1_-removebg-preview.png"
 </div>
   
   <div class="container">
