--- a/index.html
+++ b/index.html
@@ -1110,24 +1110,39 @@
   // ... (professores já definidos anteriormente)
 
   // PROFESSORES ADICIONADOS:
+   "ADEMAR": {
+    "MANHA": ["1D", "1E", "1E", "1F", "1F", "1B", "1B", "1A", "1A", "1D", "1C", "1C"],
+    "TARDE": ["9C", "9B", "9B", "1G", "1G", "9A", "9A", "9C", "9C", "9D", "9A", "9D"],
+    "NOITE": ["2F", "2G", "2G", "2H", "2F", "2H", "1H", "1H", "2F", "2G", "2G", "2H"]
+  },
+  "ALISSON": {
+    "MANHA": ["6A", "6D", "6B", "1F", "6A", "6A", "1D", "6C", "1B", "1B/BIO", "3C/PV", "6C/CIÉ", "1E/BIO", "6B", "6B", "1C", "6C", "1F", "6D", "1E", "1A", "1A", "1C", "6D/C", "1D"],
+    "TARDE": ["8A", "8A", "7D/PV", "7C/PV", "8A", "8A", "7E/PV", "7C/PV", "8A", "8A", "7E/PV", "7C/PV"],
+    "NOITE": []
+  },
+  "ANDRÉIA": {
+    "MANHA": ["1E", "1F", "1D", "2C", "1C", "2D", "1F/R", "1D", "1F", "1E", "1C", "1F/R", "2C/R", "1D", "1C", "1C", "1E", "1C/R", "1D/R", "1E", "1B/R", "1E/R", "1D/R", "1F", "2D/R", "1E", "1C", "1F", "1D", "1B/R"],
+    "TARDE": [],
+    "NOITE": []
+  },
   "ANTONIO": {
     "MANHA": [],
     "TARDE": [],
     "NOITE": ["3G", "2F", "2F", "2G", "2G"] // Biologia (Quinta Noite)
   },
-  "CHARLES": {
-    "MANHA": [], // Não encontrado no PDF
+  "ANTONIO CARLOS": {
+    "MANHA": ["2B", "2B", "2E", "2E", "2C", "2C", "2D", "2D", "2A", "2D", "2D", "2E", "2E", "2A", "2A", "2C", "2C", "2A", "2B", "2B"],
     "TARDE": [],
+    "NOITE": ["3G", "2F", "2F", "2G", "2G"]
+  },
+  "BETE": {
+    "MANHA": ["1A", "1A", "1A", "1E", "1B", "1B", "1E/EF", "1E/EF", "1D", "1D", "1B", "1A", "1C/EF", "1C/EF", "1E", "1E", "1D/EF", "1D/EF", "1C", "1C", "1E", "1B", "1A/EF", "1A/EF", "1B/EF", "1B/EF", "1D", "1D", "1C", "1C"],
+    "TARDE": ["1G", "1G"],
     "NOITE": []
   },
-  "CELSO": {
-    "MANHA": [], // Não encontrado no PDF
-    "TARDE": [],
-    "NOITE": []
-  },
-  "DEIZY": {
-    "MANHA": [], // Não encontrado no PDF
-    "TARDE": [],
+  "DANIEL": {
+    "MANHA": ["6C", "6C", "2C", "6D", "3C", "3C", "2ADM/H", "2ADM/H", "6A", "2C", "2D/L", "2D/L", "6B", "6B", "2A", "2A", "2B", "2B", "2D", "2D", "6D", "6A", "3B", "3B", "3A", "3A", "2C/L", "2C/L", "2E", "2E"],
+    "TARDE": ["6E", "6E"],
     "NOITE": []
   },
   "DANIELLE": {
@@ -1135,15 +1150,25 @@
     "TARDE": [],
     "NOITE": ["3F", "2F", "3G", "3E", "3D"] // Química (Terça/Quinta Noite)
   },
+  "DANIELA": {
+    "MANHA": ["1C", "1C", "6A", "6A", "6D", "6D", "6B", "6B", "6C", "6C", "1D", "1D", "1A", "1A", "1F", "1F", "1B", "1B", "1E", "1E"],
+    "TARDE": ["7D", "7C", "9A", "7E", "7E", "7C", "7D", "7B", "7B", "7A", "1G", "1G", "9D", "7A", "7D", "7B", "7B", "7A", "1G", "1G"],
+    "NOITE": ["1H"]
+  },
+  "EDIANE": {
+    "MANHA": ["2ADM", "2ADM", "2ADM"],
+    "TARDE": ["6E/R", "7C", "6F", "6F", "7B", "6F", "7C", "7B", "6F/R", "6F/R", "9C/O", "9D/O", "6F", "7D", "9D/OP", "7D", "7C", "7D", "7B", "7D", "7C", "9B/OP", "6E/R", "9B/OP", "9C/OP", "7B", "6F", "6F", "7C"],
+    "NOITE": ["2G", "2F", "2F", "3E/OP", "3E/OP", "2H", "2H", "2H", "2F", "2F", "3F", "3F", "2G", "2G", "2G", "3G/OP", "3G/OP", "3D/OP", "3D/OP"]
+  },
   "EDUARDO": {
     "MANHA": [],
     "TARDE": ["7C", "8B", "7D", "8B", "7D", "7C"], // Educação Física (Quarta Tarde)
     "NOITE": []
   },
-  "ERINEIDE": {
-    "MANHA": [], // Não encontrado no PDF
-    "TARDE": [],
-    "NOITE": []
+  "ELIAS": {
+    "MANHA": ["2E", "2E", "3B", "3B", "2C", "2C", "1C", "1C", "2ADM/Q", "2ADM/Q", "3A", "3A", "2B", "2B", "1A", "1A", "2A", "1F", "1B", "1B", "3C", "3C", "1E", "1E", "1D", "1D", "1F", "2A", "2D", "2D"],
+    "TARDE": ["1G", "1G", "9C", "9C", "9B", "9B/OM", "9A", "8E/PV", "9A", "8D/PV"],
+    "NOITE": ["1H/Q", "1H/Q", "1H/EF", "1H/EF", "1H/F", "1H/F"]
   },
   "FÁBIO": {
     "MANHA": [],
@@ -1160,14 +1185,24 @@
     "TARDE": [],
     "NOITE": []
   },
-  "HELENA": {
-    "MANHA": [], // Não encontrado no PDF
-    "TARDE": [],
-    "NOITE": []
-  },
   "INGRYD": {
     "MANHA": [],
     "TARDE": ["8E", "8D", "8D", "8E", "6E", "6E", "8C", "6F", "8D", "8D", "6F", "6E", "6E", "6F", "6F", "8E"], // Matemática (Segunda/Quarta Tarde)
+    "NOITE": []
+  },
+  "JANINA": {
+    "MANHA": ["2ADM/B", "2ADM/B", "2B", "2A", "2A", "2B", "3C/BIOT", "3C/BIOT", "2C", "2C", "3A", "3A", "3B", "3B", "2E", "2D", "2D", "2E"],
+    "TARDE": ["9B", "9C", "9B", "9C", "9D", "9B", "9A", "9A"],
+    "NOITE": ["3D", "3F", "3D", "3E", "3E", "3F"]
+  },
+  "JUAREZ": {
+    "MANHA": ["1E", "1E", "1F", "3A", "3A", "3C", "3C", "1F", "1D", "1D", "3B", "3B", "1E", "1E", "1F"],
+    "TARDE": [],
+    "NOITE": ["2F/FÍS", "2G", "2G", "1J", "1J", "2H", "2H", "3F", "3E", "3E", "2F/FÍS", "2G", "2G", "1J", "1J", "2H/Q", "3D", "3D", "2G", "2G"]
+  },
+  "KATIUSCIA": {
+    "MANHA": ["1A", "1A"],
+    "TARDE": ["8A", "9C", "8B", "8C", "8E", "8E", "7C", "7A", "7A", "7D", "7D", "8B", "9D", "9D", "9A", "9A", "7E", "7E", "8C", "7F", "7F", "8D", "8D", "7C"],
     "NOITE": []
   },
   "LUCIANA": {
@@ -1175,10 +1210,25 @@
     "TARDE": [],
     "NOITE": ["3G", "3G", "3D", "3F", "3F", "3G", "3G", "1I", "1I", "3E", "3D", "3D"] // Português (Segunda/Quinta Noite)
   },
-  "Mª APARECIDA": {
-    "MANHA": [], // Não encontrado no PDF
-    "TARDE": [],
+  "MARINA": {
+    "MANHA": ["6B", "6A", "6B/EF", "6B/EF", "6D", "6D", "6D", "6B", "6A", "6B", "6C", "6C", "6C", "6B", "6A/EF", "6A/EF", "6D", "6D", "6A", "6D/EF", "6D/EF", "6A", "6C", "6C", "6A", "6B", "6C/EF", "6C/EF"],
+    "TARDE": ["6F", "6F", "6E", "6E", "7A", "7B/EF", "7B/EF", "7A", "7A/EF", "7A/EF"],
     "NOITE": []
+  },
+  "MOISÉS": {
+    "MANHA": [],
+    "TARDE": [],
+    "NOITE": ["3E/OM", "3G", "3G", "3F/OM", "3F/OM", "3E", "3E", "3G", "3G", "3D", "3G/OM", "3D/OM", "3D/OM", "3F", "3F"]
+  },
+  "NILDES": {
+    "MANHA": ["3C", "2C", "2D", "3A", "2D", "3A", "2B", "3A/OM", "3B", "3B", "2C", "2C", "3B", "2C", "3C", "2D", "3A/O M", "3B", "2E", "2E", "2B", "2B", "3A", "2E", "2B", "2E", "3C", "2D", "3A", "3C"],
+    "TARDE": ["8A", "8A"],
+    "NOITE": []
+  },
+  "PEDRO": {
+    "MANHA": [],
+    "TARDE": ["6F", "6F"],
+    "NOITE": ["3F", "3G", "3E", "3G", "1I", "1I", "3F", "3E"]
   },
   "RAUL": {
     "MANHA": [],
@@ -1190,6 +1240,16 @@
     "TARDE": ["7E", "7F", "7C", "7D", "7B", "7E", "7C", "7D", "7B", "7F", "7E", "6E/G", "6E/G"], // Matemática/Geografia (Segunda/Terça Tarde)
     "NOITE": ["3G", "1J/EF", "1J/EF", "3G/F", "2H/EF", "2H/EF"] // Física/Ed. Física (Quarta Noite)
   },
+  "RODRIGO": {
+    "MANHA": ["1D", "1D", "1C", "1C", "1F", "1F", "1B", "1B", "1A", "1A", "1E", "1E", "3D", "3G", "3E"],
+    "TARDE": [],
+    "NOITE": ["3D", "3G", "3E", "3D", "2G", "2F", "1I", "1I", "3F", "2G", "1I"]
+  },
+  "ROSANGELA": {
+    "MANHA": ["1B", "1B", "2A", "2A", "2E", "2E", "1A", "1A", "1C", "1C", "2B", "2B", "2A/PR", "2A/PR", "3A/PR", "3A/PR", "2C/Q", "2C/Q", "3B/EM", "3B/EM", "2D/QU", "2D/QU", "2B/PR", "2B/PR", "3B/P", "3B/P", "3A/EM", "3C/P", "3C/P", "3A/EM"],
+    "TARDE": ["1G", "1G"],
+    "NOITE": []
+  },
   "SÉRGIO": {
     "MANHA": ["2A", "3B", "3A", "2B", "2A", "3B", "3A", "2B"], // Redação (Segunda Manhã)
     "TARDE": ["9D", "9D", "7C", "7C", "8D", "8D", "9B", "9B", "9C", "9C", "9A", "9A"], // Redação (Segunda/Terça Tarde)
@@ -1200,32 +1260,28 @@
     "TARDE": ["7A", "7F", "7F", "7A", "7B", "7B", "6F", "6F", "6E", "6E", "7E", "7E"], // Educação Física (Segunda/Sexta Tarde)
     "NOITE": []
   },
-  "VANDA": {
-    "MANHA": [], // Não encontrado no PDF
-    "TARDE": [],
-    "NOITE": []
-  }
-};
-
-const horariosProfessores = {
-  // ... (professores já definidos anteriormente)
-
-  // PROFESSORES ADICIONADOS ABAIXO:
-  "TITO": {
-    "MANHA": ["6D"],
-    "TARDE": ["7A", "7F", "7F", "7A", "7B", "7B", "6F", "6F", "6E", "6E", "7E", "7E"],
-    "NOITE": []
-  },
   "VANDERSON": {
     "MANHA": ["3A", "3A", "3C", "3C", "3B", "3C", "3C", "3A", "3A"],
     "TARDE": [],
     "NOITE": []
   },
+  "VIVIANE": {
+    "MANHA": ["6B", "1B", "6B", "3A", "1D", "6C", "1F", "1E", "1B", "6C", "1C", "1D", "6D", "6A", "1F", "1C", "3A", "6A", "6D", "1E", "6A", "6D"],
+    "TARDE": ["7E/R", "6E/T", "7E/R", "7A/T", "6E/T", "7D/T", "7E/T", "7C/T", "7A/R", "7A/R", "7C/T", "7B/T", "7B/T", "8B/PV", "9D/PV", "7D/T", "7F/T", "7F/T", "7E", "7E/T", "7C/T", "7A/R", "7A/R", "7C/T", "7B/T"],
+    "NOITE": ["1H/R", "1H/P", "1H/P", "1H/R", "1H/P", "1H/P"]
+  },
+  // Professores de Sala Fixa
   "FLÁVIA": {
     "MANHA": ["X", "X", "X", "X", "X", "X"], // Sala de Leitura (fixo)
     "TARDE": [],
     "NOITE": []
   },
+  "SOL": {
+    "MANHA": [],
+    "TARDE": ["X", "X", "X", "X", "X", "X"], // Sala de Leitura (fixo)
+    "NOITE": []
+  },
+  // Demais professores
   "CAROL": {
     "MANHA": [],
     "TARDE": ["1G", "1G", "7A", "7A", "9D", "9D", "9A", "7B", "7B", "9B", "9B", "9C", "9D"],
@@ -1306,11 +1362,6 @@ const horariosProfessores = {
     "TARDE": ["7D/EF", "8A/T", "8E/T", "8C/EF", "8D/EF", "8D/EF", "8B/T", "8C/T", "8D/T", "8C/EF", "8D/T", "7C/EF", "7D/EF", "7C/EF", "8B/EF", "8A/T", "8E/T", "8B/EF"],
     "NOITE": []
   },
-  "SOL": {
-    "MANHA": [],
-    "TARDE": ["X", "X", "X", "X", "X", "X"], // Sala de Leitura (fixo)
-    "NOITE": []
-  },
   "ELIANE CONTI": {
     "MANHA": ["3C/EMP"],
     "TARDE": [],
@@ -1346,122 +1397,53 @@ const horariosProfessores = {
     "TARDE": [],
     "NOITE": []
   },
-  "RICARDO": {
-    "MANHA": [], // Não encontrado no documento
-    "TARDE": [],
-    "NOITE": []
-  },
   "SANDRA": {
     "MANHA": [],
     "TARDE": [],
     "NOITE": ["1H/F", "1H/G", "1H/G"]
+  },
+  // Professores sem horários definidos
+  "CHARLES": {
+    "MANHA": [],
+    "TARDE": [],
+    "NOITE": []
+  },
+  "CELSO": {
+    "MANHA": [],
+    "TARDE": [],
+    "NOITE": []
+  },
+  "DEIZY": {
+    "MANHA": [],
+    "TARDE": [],
+    "NOITE": []
+  },
+  "ERINEIDE": {
+    "MANHA": [],
+    "TARDE": [],
+    "NOITE": []
+  },
+  "HELENA": {
+    "MANHA": [],
+    "TARDE": [],
+    "NOITE": []
+  },
+  "Mª APARECIDA": {
+    "MANHA": [],
+    "TARDE": [],
+    "NOITE": []
+  },
+  "VANDA": {
+    "MANHA": [],
+    "TARDE": [],
+    "NOITE": []
+  },
+  "RICARDO": {
+    "MANHA": [],
+    "TARDE": [],
+    "NOITE": []
   }
 };
-
-const horariosProfessores = {
-  "ADEMAR": {
-    "MANHA": ["1D", "1E", "1E", "1F", "1F", "1B", "1B", "1A", "1A", "1D", "1C", "1C"],
-    "TARDE": ["9C", "9B", "9B", "1G", "1G", "9A", "9A", "9C", "9C", "9D", "9A", "9D"],
-    "NOITE": ["2F", "2G", "2G", "2H", "2F", "2H", "1H", "1H", "2F", "2G", "2G", "2H"]
-  },
-  "ALISSON": {
-    "MANHA": ["6A", "6D", "6B", "1F", "6A", "6A", "1D", "6C", "1B", "1B/BIO", "3C/PV", "6C/CIÉ", "1E/BIO", "6B", "6B", "1C", "6C", "1F", "6D", "1E", "1A", "1A", "1C", "6D/C", "1D"],
-    "TARDE": ["8A", "8A", "7D/PV", "7C/PV", "8A", "8A", "7E/PV", "7C/PV", "8A", "8A", "7E/PV", "7C/PV"],
-    "NOITE": []
-  },
-  "ANDRÉIA": {
-    "MANHA": ["1E", "1F", "1D", "2C", "1C", "2D", "1F/R", "1D", "1F", "1E", "1C", "1F/R", "2C/R", "1D", "1C", "1C", "1E", "1C/R", "1D/R", "1E", "1B/R", "1E/R", "1D/R", "1F", "2D/R", "1E", "1C", "1F", "1D", "1B/R"],
-    "TARDE": [],
-    "NOITE": []
-  },
-  "ANTONIO CARLOS": {
-    "MANHA": ["2B", "2B", "2E", "2E", "2C", "2C", "2D", "2D", "2A", "2D", "2D", "2E", "2E", "2A", "2A", "2C", "2C", "2A", "2B", "2B"],
-    "TARDE": [],
-    "NOITE": ["3G", "2F", "2F", "2G", "2G"]
-  },
-  "BETE": {
-    "MANHA": ["1A", "1A", "1A", "1E", "1B", "1B", "1E/EF", "1E/EF", "1D", "1D", "1B", "1A", "1C/EF", "1C/EF", "1E", "1E", "1D/EF", "1D/EF", "1C", "1C", "1E", "1B", "1A/EF", "1A/EF", "1B/EF", "1B/EF", "1D", "1D", "1C", "1C"],
-    "TARDE": ["1G", "1G"],
-    "NOITE": []
-  },
-  "DANIEL": {
-    "MANHA": ["6C", "6C", "2C", "6D", "3C", "3C", "2ADM/H", "2ADM/H", "6A", "2C", "2D/L", "2D/L", "6B", "6B", "2A", "2A", "2B", "2B", "2D", "2D", "6D", "6A", "3B", "3B", "3A", "3A", "2C/L", "2C/L", "2E", "2E"],
-    "TARDE": ["6E", "6E"],
-    "NOITE": []
-  },
-  "DANIELA": {
-    "MANHA": ["1C", "1C", "6A", "6A", "6D", "6D", "6B", "6B", "6C", "6C", "1D", "1D", "1A", "1A", "1F", "1F", "1B", "1B", "1E", "1E"],
-    "TARDE": ["7D", "7C", "9A", "7E", "7E", "7C", "7D", "7B", "7B", "7A", "1G", "1G", "9D", "7A", "7D", "7B", "7B", "7A", "1G", "1G"],
-    "NOITE": ["1H"]
-  },
-  "EDIANE": {
-    "MANHA": ["2ADM", "2ADM", "2ADM"],
-    "TARDE": ["6E/R", "7C", "6F", "6F", "7B", "6F", "7C", "7B", "6F/R", "6F/R", "9C/O", "9D/O", "6F", "7D", "9D/OP", "7D", "7C", "7D", "7B", "7D", "7C", "9B/OP", "6E/R", "9B/OP", "9C/OP", "7B", "6F", "6F", "7C"],
-    "NOITE": ["2G", "2F", "2F", "3E/OP", "3E/OP", "2H", "2H", "2H", "2F", "2F", "3F", "3F", "2G", "2G", "2G", "3G/OP", "3G/OP", "3D/OP", "3D/OP"]
-  },
-  "ELIAS": {
-    "MANHA": ["2E", "2E", "3B", "3B", "2C", "2C", "1C", "1C", "2ADM/Q", "2ADM/Q", "3A", "3A", "2B", "2B", "1A", "1A", "2A", "1F", "1B", "1B", "3C", "3C", "1E", "1E", "1D", "1D", "1F", "2A", "2D", "2D"],
-    "TARDE": ["1G", "1G", "9C", "9C", "9B", "9B/OM", "9A", "8E/PV", "9A", "8D/PV"],
-    "NOITE": ["1H/Q", "1H/Q", "1H/EF", "1H/EF", "1H/F", "1H/F"]
-  },
-  "JANINA": {
-    "MANHA": ["2ADM/B", "2ADM/B", "2B", "2A", "2A", "2B", "3C/BIOT", "3C/BIOT", "2C", "2C", "3A", "3A", "3B", "3B", "2E", "2D", "2D", "2E"],
-    "TARDE": ["9B", "9C", "9B", "9C", "9D", "9B", "9A", "9A"],
-    "NOITE": ["3D", "3F", "3D", "3E", "3E", "3F"]
-  },
-  "JUAREZ": {
-    "MANHA": ["1E", "1E", "1F", "3A", "3A", "3C", "3C", "1F", "1D", "1D", "3B", "3B", "1E", "1E", "1F"],
-    "TARDE": [],
-    "NOITE": ["2F/FÍS", "2G", "2G", "1J", "1J", "2H", "2H", "3F", "3E", "3E", "2F/FÍS", "2G", "2G", "1J", "1J", "2H/Q", "3D", "3D", "2G", "2G"]
-  },
-  "MOISÉS": {
-    "MANHA": [],
-    "TARDE": [],
-    "NOITE": ["3E/OM", "3G", "3G", "3F/OM", "3F/OM", "3E", "3E", "3G", "3G", "3D", "3G/OM", "3D/OM", "3D/OM", "3F", "3F"]
-  },
-  "PEDRO": {
-    "MANHA": [],
-    "TARDE": ["6F", "6F"],
-    "NOITE": ["3F", "3G", "3E", "3G", "1I", "1I", "3F", "3E"]
-  },
-  "RODRIGO": {
-    "MANHA": ["1D", "1D", "1C", "1C", "1F", "1F", "1B", "1B", "1A", "1A", "1E", "1E", "3D", "3G", "3E"],
-    "TARDE": [],
-    "NOITE": ["3D", "3G", "3E", "3D", "2G", "2F", "1I", "1I", "3F", "2G", "1I"]
-  },
-  "VIVIANE": {
-    "MANHA": ["6B", "1B", "6B", "3A", "1D", "6C", "1F", "1E", "1B", "6C", "1C", "1D", "6D", "6A", "1F", "1C", "3A", "6A", "6D", "1E", "6A", "6D"],
-    "TARDE": ["7E/R", "6E/T", "7E/R", "7A/T", "6E/T", "7D/T", "7E/T", "7C/T", "7A/R", "7A/R", "7C/T", "7B/T", "7B/T", "8B/PV", "9D/PV", "7D/T", "7F/T", "7F/T", "7E", "7E/T", "7C/T", "7A/R", "7A/R", "7C/T", "7B/T"],
-    "NOITE": ["1H/R", "1H/P", "1H/P", "1H/R", "1H/P", "1H/P"]
-  },
-  // ... (outros professores abaixo)
-  "ANDRÉIA": { /* já definido acima */ },
-  // Adicionando professores faltantes:
-  "KATIUSCIA": {
-    "MANHA": ["1A", "1A"],
-    "TARDE": ["8A", "9C", "8B", "8C", "8E", "8E", "7C", "7A", "7A", "7D", "7D", "8B", "9D", "9D", "9A", "9A", "7E", "7E", "8C", "7F", "7F", "8D", "8D", "7C"],
-    "NOITE": []
-  },
-  "MARINA": {
-    "MANHA": ["6B", "6A", "6B/EF", "6B/EF", "6D", "6D", "6D", "6B", "6A", "6B", "6C", "6C", "6C", "6B", "6A/EF", "6A/EF", "6D", "6D", "6A", "6D/EF", "6D/EF", "6A", "6C", "6C", "6A", "6B", "6C/EF", "6C/EF"],
-    "TARDE": ["6F", "6F", "6E", "6E", "7A", "7B/EF", "7B/EF", "7A", "7A/EF", "7A/EF"],
-    "NOITE": []
-  },
-  "NILDES": {
-    "MANHA": ["3C", "2C", "2D", "3A", "2D", "3A", "2B", "3A/OM", "3B", "3B", "2C", "2C", "3B", "2C", "3C", "2D", "3A/O M", "3B", "2E", "2E", "2B", "2B", "3A", "2E", "2B", "2E", "3C", "2D", "3A", "3C"],
-    "TARDE": ["8A", "8A"],
-    "NOITE": []
-  },
-  "ROSANGELA": {
-    "MANHA": ["1B", "1B", "2A", "2A", "2E", "2E", "1A", "1A", "1C", "1C", "2B", "2B", "2A/PR", "2A/PR", "3A/PR", "3A/PR", "2C/Q", "2C/Q", "3B/EM", "3B/EM", "2D/QU", "2D/QU", "2B/PR", "2B/PR", "3B/P", "3B/P", "3A/EM", "3C/P", "3C/P", "3A/EM"],
-    "TARDE": ["1G", "1G"],
-    "NOITE": []
-  },
-  "SÉRGIO": {
-    "MANHA": ["2A", "3B", "3A", "2B", "2A", "3B", "3A", "2B"],
-    "TARDE": ["9D", "9D", "7C", "7C", "8D", "8D", "9B", "9B", "9C", "9C", "9A", "9A"],
-    "NOITE": ["2F", "3D", "3E", "3F", "2F", "1J", "3D", "2G", "3E", "2H", "3G"]
-  }
   // ... (todos os outros professores)
 };
 
