--- a/index.html
+++ b/index.html
@@ -1284,7 +1284,7 @@
 "MANHA": [], 
 "TARDE": [], 
 "NOITE": ["1I", "2F", "1I", "3D", "1I", "3D", "3E", "2G", "1I", "2H"] // Matemática 
-(Segunda/Quinta Noite) 
+
 }, 
 "GENILTON": { 
 "MANHA": [], 
@@ -1325,8 +1325,7 @@
 "LUCIANA": { 
 "MANHA": [], 
 "TARDE": [], 
-"NOITE": ["3G", "3G", "3D", "3F", "3F", "3G", "3G", "1I", "1I", "3E", "3D", "3D"] // 
-Português (Segunda/Quinta Noite) 
+"NOITE": ["3G", "3G", "3D", "3F", "3F", "3G", "3G", "1I", "1I", "3E", "3D", "3D"] 
 }, 
 "MARINA": { 
 "MANHA": ["6B", "6A", "6B/EF", "6B/EF", "6D", "6D", "6D", "6B", "6A", "6B", "6C", "6C", 
@@ -1363,7 +1362,6 @@ Português (Segunda/Quinta Noite)
 "TARDE": ["7E", "7F", "7C", "7D", "7B", "7E", "7C", "7D", "7B", "7F", "7E", "6E/G", 
 "6E/G"], // Matemática/Geografia (Segunda/Terça Tarde) 
 "NOITE": ["3G", "1J/EF", "1J/EF", "3G/F", "2H/EF", "2H/EF"] // Física/Ed. Física 
-(Quarta Noite) 
 }, 
 "RODRIGO": { 
 "MANHA": ["1D", "1D", "1C", "1C", "1F", "1F", "1B", "1B", "1A", "1A", "1E", "1E", "3D", 
@@ -1381,15 +1379,12 @@ Português (Segunda/Quinta Noite)
 "SÉRGIO": { 
 "MANHA": ["2A", "3B", "3A", "2B", "2A", "3B", "3A", "2B"], // Redação (Segunda 
 Manhã) 
-"TARDE": ["9D", "9D", "7C", "7C", "8D", "8D", "9B", "9B", "9C", "9C", "9A", "9A"], // 
-Redação (Segunda/Terça Tarde) 
-"NOITE": ["2F", "3D", "3E", "3F", "2F", "1J", "3D", "2G", "3E", "2H", "3G"] // Redação 
-(Segunda/Quinta Noite) 
+"TARDE": ["9D", "9D", "7C", "7C", "8D", "8D", "9B", "9B", "9C", "9C", "9A", "9A"], 
+"NOITE": ["2F", "3D", "3E", "3F", "2F", "1J", "3D", "2G", "3E", "2H", "3G"] // Redação
 }, 
 "TITO": { 
 "MANHA": ["6D"], // Educação Física (Segunda Manhã) 
-"TARDE": ["7A", "7F", "7F", "7A", "7B", "7B", "6F", "6F", "6E", "6E", "7E", "7E"], // 
-Educação Física (Segunda/Sexta Tarde) 
+"TARDE": ["7A", "7F", "7F", "7A", "7B", "7B", "6F", "6F", "6E", "6E", "7E", "7E"], 
 "NOITE": [] 
 }, 
 "VANDERSON": { 
