--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>AGENDAMENTO DE APARELHOS - SOLUÇÃO</title>
   <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-firestore-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.1/firebase-database-compat.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.28/jspdf.plugin.autotable.min.js"></script>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -1038,8 +1038,8 @@
     };
 
     // INICIALIZA O FIREBASE
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+     firebase.initializeApp(firebaseConfig);
+  const database = firebase.database();
 
     // UID DO USUÁRIO ESPECÍFICO (ATUALIZE COM SEU USER ID)
     const USER_ID = "lfSOKNcVcnZFJdrT7BpZG6H6dm32";
@@ -2424,7 +2424,52 @@
       // Carregar as aulas disponíveis ao iniciar
       atualizarAulasDisponiveis();
     }
+function verificarDisponibilidade(equipamento, quantidade, data) {
+    const ref = database.ref(`reservas/${data}/${equipamento}`);
+    return ref.once('value').then(snapshot => {
+      const reservado = snapshot.val() || 0;
+      const TOTAL_DISPONIVEL = 30; // Ajuste conforme necessário
+      return (TOTAL_DISPONIVEL - reservado) >= quantidade;
+    });
+  }
 
+  function registrarAgendamento(dados) {
+    const ref = database.ref(`reservas/${dados.data}/${dados.equipamento}`);
+    ref.transaction(current => (current || 0) + dados.quantidade);
+
+    database.ref("agendamentos").push({
+      professor: dados.professor,
+      email: dados.email,
+      equipamento: dados.equipamento,
+      quantidade: dados.quantidade,
+      data: dados.data,
+      turma: dados.turma,
+      status: "agendado",
+      criadoEm: Date.now()
+    });
+  }
+      document.querySelector('.btn-cadastrar').addEventListener('click', function () {
+    const professor = document.getElementById('professor').value;
+    const email = document.getElementById('email-professor').value;
+    const equipamento = document.getElementById('equipamentoAgendamento').value;
+    const quantidade = parseInt(document.getElementById('quantidadeAgendamento').value);
+    const data = document.getElementById('dataAgendamento').value;
+    const turma = document.getElementById('studentClass').value;
+
+    if (!professor || !email || !equipamento || !quantidade || !data || !turma) {
+      alert("Preencha todos os campos!");
+      return;
+    }
+
+    verificarDisponibilidade(equipamento, quantidade, data).then(disponivel => {
+      if (disponivel) {
+        registrarAgendamento({ professor, email, equipamento, quantidade, data, turma });
+        alert("Agendamento realizado com sucesso!");
+      } else {
+        alert("Equipamentos insuficientes disponíveis para essa data.");
+      }
+    });
+  });
     initApp();
   </script>
 </body>
